<resources>
    <string name="app_name">FamilyMap</string>

    <string name="host_label">HOST: </string>
    <string name="port_label">PORT: </string>
    <string name="userName_label">USERNAME: </string>
    <string name="password_label">PASSWORD: </string>
    <string name="firstName_label">FIRST NAME: </string>
    <string name="lastName_label">LAST NAME: </string>
    <string name="email_label">EMAIL: </string>
    <string name="gender_label">GENDER: </string>
    <string name="male_label">M:</string>
    <string name="female_label">F:</string>


    <string name="login_button">Login</string>
    <string name="register_button">Register</string>


</resources>
