<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="8"
        android:layout_weight="1">
        <TextView
            android:text="@string/host_label"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:layout_rowWeight="1"/>
        <EditText
            android:inputType="text"
            android:id="@+id/host_edit_text"
            android:layout_margin="0dp"
            android:padding="0dp"/>
        <TextView
            android:text="@string/port_label"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:layout_rowWeight="1"/>
        <EditText
            android:inputType="text"
            android:id="@+id/port_edit_text"
            android:layout_margin="0dp"
            android:padding="0dp"/>
        <TextView
            android:text="@string/userName_label"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:layout_rowWeight="1"/>
        <EditText
            android:inputType="text"
            android:id="@+id/userName_edit_text"
            android:layout_margin="0dp"
            android:padding="0dp"/>
        <TextView
            android:text="@string/password_label"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:layout_rowWeight="1"/>
        <EditText
            android:inputType="text"
            android:id="@+id/password_edit_text"
            android:layout_margin="0dp"
            android:padding="0dp"/>
        <TextView
            android:text="@string/firstName_label"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:layout_rowWeight="1"/>
        <EditText
            android:inputType="text"
            android:id="@+id/firstName_edit_text"
            android:layout_margin="0dp"
            android:padding="0dp"/>
        <TextView
            android:text="@string/lastName_label"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:layout_rowWeight="1"/>
        <EditText
            android:inputType="text"
            android:id="@+id/lastName_edit_text"
            android:layout_margin="0dp"
            android:padding="0dp"/>
        <TextView
            android:text="@string/email_label"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:layout_rowWeight="1"/>
        <EditText
            android:inputType="text"
            android:id="@+id/email_edit_text"
            android:layout_margin="0dp"
            android:padding="0dp"/>
        <TextView
            android:text="@string/gender_label"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:layout_rowWeight="1"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/gender_group">
            <RadioButton android:id="@+id/radio_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male_label"/>
            <RadioButton android:id="@+id/radio_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female_label"/>
        </RadioGroup>

    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_button"/>
        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_button"/>
    </LinearLayout>




</LinearLayout>